--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,11 @@ build-backend = "setuptools.build_meta"
 name = "pancake"
 version = "0.0.0"
 requires-python = ">=3.10"
-
+dependencies = [
+    "numpy",
+    "PySide6",
+    "pydantic",
+]
 [project.optional-dependencies]
 docs = [
     "pymdown-extensions",
