--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "pancake"
 version = "0.0.0"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 dependencies = [
     "numpy",
     "PySide6",
     "pydantic",
+#    "picamera2",
+    "gpiozero",
+#    "RPi.GPIO",
 ]
 [project.optional-dependencies]
 docs = [
