--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,51 +1,98 @@
+site_name: "Open Quantum Design - Outreach Demo"
 
-site_name: Python Package
-site_description: Description
+repo_name: OpenQuantumDesign/outreach
+repo_url: https://github.com/OpenQuantumDesign/outreach
+
+copyright: Copyright &copy; 2024 Open Quantum Design
+
+use_directory_urls: true
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/OpenQuantumDesign
+      name: Open Quantum Design GitHub
+    - icon: fontawesome/solid/globe
+      link: https://openquantumdesign.org
+      name: Open Quantum Design
 
 nav:
-  - Introduction: index.md
-
-
-use_directory_urls: false
+  - Get Started:
+      - Welcome!: index.md
+  - Building your own demo:
+      - Introduction: explanation/introduction.md
+      - 3D Printing: explanation/3dprint.md
+      - Electronics: explanation/electronics.md
+      - Software: explanation/software.md
+      - Assembly: explanation/assembly.md
 
 theme:
   name: material
 
+  logo: img/oqd-logo.png
+  favicon: img/oqd-logo.png
+
   palette:
-  - media: '(prefers-color-scheme: light)'
-    scheme: default
-    primary: light-blue
-    accent: orange
-    toggle:
-      icon: material/lightbulb
-      name: Switch to dark mode
-  - media: '(prefers-color-scheme: dark)'
-    scheme: slate
-    primary: light-blue
-    accent: orange
-    toggle:
-      icon: material/lightbulb-outline
-      name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: teal
+      accent: pink
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: teal
+      accent: pink
+      toggle:
+        icon: material/weather-night
+        name: Switch to light mode
 
   features:
-  - search.suggest
-  - search.highlight
-  - content.tabs.link
-  - navigation.indexes
-  - content.tooltips
-  - navigation.path
-  - content.code.annotate
-  - content.code.copy
-  - content.code.select
+    - search.suggest
+    - search.highlight
+    - content.tabs.link
+    - content.tooltips
+    - content.code.annotate
+    - content.code.copy
+    - content.code.select
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
+    - navigation.top
+    - navigation.prune
+    - toc.follow
 
 plugins:
-  - mkdocstrings
-
+  - mkdocstrings:
+      handlers:
+        python:
+          paths:
+            - ./src
+          options:
+            show_source: true
+            show_root_heading: false
+            show_root_toc_entry: false
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
+            show_submodules: true
+            docstring_style: "google"
+            docstring_section_style: "table"
+            show_signature: true
+            show_signature_annotations: true
+            signature_crossrefs: true
+            separate_signature: false
+            group_by_category: true
+            members_order: "source"
+          import:
+            - https://docs.python.org/3/objects.inv
+            - https://docs.pydantic.dev/latest/objects.inv
 
 markdown_extensions:
+  - attr_list
   - toc:
       permalink: true
-      toc_depth: 4
+      toc_depth: 10
 
   - pymdownx.highlight:
       anchor_linenums: true
@@ -54,11 +101,12 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
 
-  - pymdownx.tabbed:
-      alternate_style: true
-
+  # for notes/admonitions
   - pymdownx.blocks.admonition
   - pymdownx.blocks.details
+  - pymdownx.blocks.tab:
+      alternate_style: true
+  - pymdownx.blocks.html
 
   - pymdownx.superfences:
       custom_fences:
@@ -69,7 +117,15 @@ markdown_extensions:
   - pymdownx.arithmatex:
       generic: true
 
+  - mdx_truly_sane_lists:
+      nested_indent: 2
+      truly_sane: True
+
 extra_javascript:
   - javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+
+extra_css:
+  - stylesheets/headers.css
+  - stylesheets/admonitions.css
