Add copyright headers, tidy up code comments, remove older code, clean docs

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,4 +1,4 @@
-site_name: "Open Quantum Design - Outreach Demo"
+site_name: "Open Quantum Design - Outreach"
 
 repo_name: OpenQuantumDesign/outreach
 repo_url: https://github.com/OpenQuantumDesign/outreach
